--- a/COMP2000ExerciseFarmBnB/app/src/main/res/values/strings.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="booking_confirmation_message">We look forward to seeing you!\nYou can now look at your bookings in the “Manage Bookings” tab</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="error_message">hello world</string>
 </resources>
